issue-23: Add input validation and feedback. Corrects the shade behind the Notice.

--- a/src/css/UI.scss
+++ b/src/css/UI.scss
@@ -229,6 +229,7 @@ nav {
     height: 100%;
     background-color: rgba(0,0,0,0.75);
     display: none;
+    z-index: 500;
 
     &.open {
         display: block;
